# HABITS-Prediction-Framework

./: .gitignore  CMakeLists.txt  README.md
cmake/: find_dev_package.cmake
cmake/modules/: FindLibCluster.cmake
include/habits/: datasets.h
include/habits/clustering/: cluster_trajectories.h  kernel.h
include/habits/clustering/algorithm/: agl.h  em.h  kernel.h
include/habits/core/: options.h
include/habits/data/: activity_segmentation.h
include/habits/data/impl/: activity_segmentation_impl.h
include/habits/predictors/: bestpta_predictor.h  group_predictors.h  learn_predictors.h  sequence_predictor.h
include/habits/predictors/interfaces/: predictor.h
include/habits/results/: predictors.h
include/habits/segmentation/: region_based_segmentation.h  segmenter.h  state_based_segmentation.h
include/habits/segmentation/detectors/: state_based_detector.h
include/habits/segmentation/impl/: state_based_segmentation_impl.h
include/habits/segmentation/interfaces/: detector.h  segmentation.h
include/habits/segmentation/interfaces/impl/: segmentation_impl.h
include/habits/utils/: dataset_name_structure.h  setup_omp.h
src/habits/: datasets.cpp
src/habits/clustering/: cluster_trajectories.cpp  kernel.cpp
src/habits/clustering/algorithm/: agl.cpp  em.cpp  kernel.cpp
src/habits/core/: options.cpp
src/habits/data/: activity_segmentation.cpp
src/habits/predictors/: bestpta_predictor.cpp  group_predictors.cpp  learn_predictors.cpp  sequence_predictor.cpp
src/habits/predictors/interfaces/: predictor.cpp
src/habits/results/: predictors.cpp
src/habits/segmentation/: region_based_segmentation.cpp  segmenter.cpp  state_based_segmentation.cpp
src/habits/segmentation/detectors/: state_based_detector.cpp
src/habits/segmentation/interfaces/: segmentation.cpp
src/habits/utils/: dataset_name_structure.cpp
tests/: playground.cpp  test_live_segmentation.cpp
utils/: habits_goal_positions.cpp  habits_live_segmentation.cpp  habits_plot.cpp  habits_predictor_performance_statistics.cpp
